[gd_scene load_steps=19 format=2]

[ext_resource path="res://Screens/World.gd" type="Script" id=1]
[ext_resource path="res://Sounds/Effects/Blop-Mark_DiAngelo-79054334.wav" type="AudioStream" id=2]
[ext_resource path="res://Screens/Header.gd" type="Script" id=3]
[ext_resource path="res://Images/Editor/Editor_button.png" type="Texture" id=4]
[ext_resource path="res://Images/Editor/Editor_button_pressed.png" type="Texture" id=5]
[ext_resource path="res://Images/Fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Images/reset icon.png" type="Texture" id=7]
[ext_resource path="res://Images/Fonts/KeepCalm-Medium.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Images/Level_select.png" type="Texture" id=9]
[ext_resource path="res://Images/Level_select_pressed.png" type="Texture" id=10]
[ext_resource path="res://Screens/Level_select.gd" type="Script" id=11]
[ext_resource path="res://Images/arrow_unpressed_left.png" type="Texture" id=12]
[ext_resource path="res://Images/arrow_unpressed.png" type="Texture" id=13]
[ext_resource path="res://Images/Border.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]

size = 270
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 300
use_mipmaps = false
use_filter = true
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 300
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 300
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="World" type="Node2D"]

script = ExtResource( 1 )

[node name="Audio_Player" type="AudioStreamPlayer2D" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Header" type="Node2D" parent="." index="1"]

script = ExtResource( 3 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="Infinity" type="TextureButton" parent="Header" index="0"]

modulate = Color( 0.733333, 0.733333, 0.733333, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 9.0
margin_top = 8.0
margin_right = 609.0
margin_bottom = 414.0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Textures", "Visibility" ]

[node name="Label" type="Label" parent="Header/Infinity" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -16.0
margin_top = 48.0
margin_right = 618.0
margin_bottom = 348.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Infinity"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Reset" type="TextureButton" parent="Header" index="1"]

modulate = Color( 0.765625, 0.308044, 0.308044, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 421.0
margin_top = 1.0
margin_right = 957.0
margin_bottom = 401.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Textures", "Visibility" ]

[node name="Sprite" type="Sprite" parent="Header/Reset" index="0"]

visible = false
position = Vector2( 205.222, 178.113 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Header/Reset" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 2.0
margin_right = 597.0
margin_bottom = 401.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "reset"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "custom_colors", "custom_fonts" ]

[node name="Goal" type="TextureButton" parent="Header" index="2"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = 166.0
margin_right = 512.0
margin_bottom = 599.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Grow Direction", "Rect", "Textures", "Visibility" ]

[node name="Label" type="Label" parent="Header/Goal" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 601.0
margin_bottom = 399.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Level_select" type="TextureButton" parent="Header" index="3"]

modulate = Color( 0.734375, 0.734375, 0.734375, 1 )
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 146.0
margin_top = 8.0
margin_right = 546.0
margin_bottom = 408.0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
script = ExtResource( 11 )
_sections_unfolded = [ "Anchor", "Rect", "Textures", "Visibility" ]

[node name="Label" type="Label" parent="Header/Level_select" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 406.0
margin_bottom = 388.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_fonts" ]

[node name="Left" type="TextureButton" parent="Header/Level_select" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -180.0
margin_top = 125.0
margin_right = 220.0
margin_bottom = 525.0
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 12 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Right" type="TextureButton" parent="Header/Level_select" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 421.0
margin_top = 118.0
margin_right = 821.0
margin_bottom = 518.0
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 13 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="LineEdit" type="LineEdit" parent="Header/Level_select" index="3"]

self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 405.0
margin_bottom = 407.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
blend_times = [  ]

[node name="TextureRect" type="TextureRect" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 540.0
margin_bottom = 960.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 14 )
stretch_mode = 0

[connection signal="pressed" from="Header/Reset" to="." method="_on_TextureButton_pressed"]

[connection signal="button_down" from="Header/Level_select" to="Header/Level_select" method="_on_Level_select_button_down"]

[connection signal="button_up" from="Header/Level_select" to="Header/Level_select" method="_on_Level_select_button_up"]

[connection signal="gui_input" from="Header/Level_select" to="Header/Level_select" method="_on_Level_select_gui_input"]

[connection signal="pressed" from="Header/Level_select" to="Header/Level_select" method="_on_Level_select_pressed"]

[connection signal="pressed" from="Header/Level_select/Left" to="." method="_on_Left_pressed"]

[connection signal="pressed" from="Header/Level_select/Right" to="." method="_on_Right_pressed"]

[connection signal="text_entered" from="Header/Level_select/LineEdit" to="Header/Level_select" method="_on_LineEdit_text_entered"]


